--- a/app/src/main/res/layout/activity_organizer_organizer_info.xml
+++ b/app/src/main/res/layout/activity_organizer_organizer_info.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/wallpaper"
     tools:context=".organizer_organizer_info"
     tools:layout_editor_absoluteY="81dp">
 
@@ -129,7 +130,7 @@
         app:layout_constraintStart_toEndOf="@+id/btn_player_update_profile"
         app:layout_constraintTop_toBottomOf="@+id/btn_reset_password" />
 
-     <!-- nav bar -->
+    <!-- nav bar -->
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -219,7 +220,6 @@
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/console_black" />
-
 
 
     <ImageView
