--- a/app/src/main/res/layout/activity_game_create.xml
+++ b/app/src/main/res/layout/activity_game_create.xml
@@ -5,6 +5,7 @@
     android:id="@+id/submit_button"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/wallpaper"
     tools:context=".game_create">
 
     <!-- nav bar -->
