--- a/app/src/main/res/layout/activity_team_home.xml
+++ b/app/src/main/res/layout/activity_team_home.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/wallpaper"
     android:onClick="user_team_managepage"
     app:layout_marginBaseline="100dp"
     tools:context=".team_home">
