--- a/app/src/main/res/layout/activity_tournament_join_user.xml
+++ b/app/src/main/res/layout/activity_tournament_join_user.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/wallpaper"
     tools:context=".tournament_join_user">
 
 
-      <!-- nav bar -->
+    <!-- nav bar -->
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
